Run tests for paper

--- a/association_rule_mining.ipynb
+++ b/association_rule_mining.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,7 @@
     "    fracture_codes = ['FL', 'FC', 'FM', 'FS', 'FH']\n",
     "    crack_codes = ['CL', 'CC', 'CM', 'CS', 'CH']\n",
     "    broken_codes = ['BSV', 'BVV']\n",
+    "    collapse_codes = ['X']\n",
     "    \n",
     "    df_cond.loc[df_cond['PACP_Code'].isin(deposit_codes), 'PACP_Code'] = 'Deposit'\n",
     "    df_cond.loc[df_cond['PACP_Code'].isin(deformed_codes), 'PACP_Code'] = 'Deformed'\n",
@@ -81,6 +82,7 @@
     "    df_cond.loc[df_cond['PACP_Code'].isin(fracture_codes), 'PACP_Code'] = 'Fracture'\n",
     "    df_cond.loc[df_cond['PACP_Code'].isin(crack_codes), 'PACP_Code'] = 'Crack'\n",
     "    df_cond.loc[df_cond['PACP_Code'].isin(broken_codes), 'PACP_Code'] = 'Broken'\n",
+    "    df_cond.loc[df_cond['PACP_Code'].isin(collapse_codes), 'PACP_Code'] = 'Collapse'\n",
     "    \n",
     "    df_cond.loc[df_cond['PACP_Code'].str.startswith('T'), 'PACP_Code'] = 'Tap'\n",
     "    df_cond.loc[df_cond['PACP_Code'].str.startswith('A'), 'PACP_Code'] = 'Manhole'\n",
@@ -153,20 +155,13 @@
     "            \n",
     "    return defect_pair_counts\n",
     "\n",
-    "def calculate_length_of_pipeline(df_cond):\n",
-    "    # Find total length of pipeline\n",
-    "    insps = df_cond['InspectionID'].unique()\n",
-    "    length = 0.0\n",
-    "    for insp in insps:\n",
-    "        df_temp = df_cond[df_cond['InspectionID'] == insp]\n",
-    "        length += df_temp['Distance'].max()\n",
-    "    return length\n",
+    "\n",
     "   \n",
     "\n",
     "def create_econometric_database(df_insp, cols, defects):\n",
     "    df_insp = df_insp[cols]\n",
     "\n",
-    "    f, c, t, m, j, r, d, b = [], [], [], [], [], [], [], []\n",
+    "    f, c, t, m, j, r, d, b, h, cp = [], [], [], [], [], [], [], [], [], []\n",
     "\n",
     "    insp_ids = list(df_insp['InspectionID'])\n",
     "\n",
@@ -182,6 +177,8 @@
     "        r.append(len(df_temp[df_temp['PACP_Code'] == 'Root']))\n",
     "        d.append(len(df_temp[df_temp['PACP_Code'] == 'Deposit']))\n",
     "        b.append(len(df_temp[df_temp['PACP_Code'] == 'Broken']))\n",
+    "        h.append(len(df_temp[df_temp['PACP_Code'] == 'Hole']))\n",
+    "        cp.append(len(df_temp[df_temp['PACP_Code'] == 'Collapse']))\n",
     "\n",
     "    df_insp['Fracture'] = f\n",
     "    df_insp['Crack'] = c\n",
@@ -191,47 +188,46 @@
     "    df_insp['Root'] = r\n",
     "    df_insp['Deposit'] = d\n",
     "    df_insp['Broken'] = b\n",
+    "    df_insp['Hole'] = h\n",
+    "    df_insp['Collapse'] = cp\n",
     "    \n",
     "    return df_insp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of inspections to begin with are: 8891\n",
+      "Total number of inspections to begin with are: 3618\n",
+      "Length : 108581.10015941903\n",
+      "\n",
+      "Number of inspections which contain defects is: 768\n",
       "\n",
       "Number of defects is as follows: \n",
-      "Tap             29688\n",
-      "Manhole         17167\n",
-      "Crack            9197\n",
-      "Fracture         8558\n",
-      "Deposit          8003\n",
-      "Root             7943\n",
-      "Joint Offset     1943\n",
-      "Broken            458\n",
+      "Crack           789\n",
+      "Fracture        354\n",
+      "Broken          172\n",
+      "Joint Offset    144\n",
+      "Hole             34\n",
       "Name: PACP_Code, dtype: int64\n",
       "\n",
-      "Number of inspections with Joint Offset and Fracture is: 2039\n",
+      "Number of inspections with Joint Offset and Fracture is: 352\n",
       "\n",
       "Number of defects in these inspections is as follows: \n",
-      "Tap             10244\n",
-      "Fracture         8558\n",
-      "Crack            7291\n",
-      "Deposit          4008\n",
-      "Root             3983\n",
-      "Manhole          3793\n",
-      "Joint Offset     1943\n",
-      "Broken            336\n",
+      "Fracture        354\n",
+      "Crack           225\n",
+      "Joint Offset    144\n",
+      "Broken           64\n",
+      "Hole             10\n",
       "Name: PACP_Code, dtype: int64\n",
       "\n",
-      "Number of (Joint Offset, Fracture) clusters is: 718\n",
-      "Length : 419601.8005263697\n"
+      "Number of (Joint Offset, Fracture) clusters is: 6\n",
+      "Length : 52995.300032654\n"
      ]
     }
    ],
@@ -239,7 +235,7 @@
     "cluster_size = 10\n",
     "\n",
     "# Read the database of condition information from CSV\n",
-    "df_cond = pd.read_csv('Conditions_Combined.csv', sep=',')\n",
+    "df_cond = pd.read_csv('Conditions_Taylors.csv', sep=',')\n",
     "df_cond.head();\n",
     "print(\"Total number of inspections to begin with are: {}\".format(df_cond['InspectionID'].max()))\n",
     "\n",
@@ -247,17 +243,17 @@
     "df_cond = change_defect_names(df_cond)\n",
     "\n",
     "# Keep only the rows which contain these defects. Delete all else\n",
-    "keep_defects = ['Fracture', 'Crack', 'Tap', 'Manhole', 'Joint Offset', 'Root', 'Deposit', 'Broken']\n",
-    "df_cond = delete_rows(df_cond, keep_defects)\n",
+    "keep_defects_struct = ['Fracture', 'Crack', 'Joint Offset', 'Broken', 'Hole', 'Collapse']\n",
+    "keep_defects_operat = ['Root', 'Deposit']\n",
     "\n",
-    "# Delete inspections which have no 'defects', i.e, fracture, crack, root, joint offset, deposit, broken\n",
-    "defects = ['Fracture', 'Crack', 'Joint Offset', 'Root', 'Deposit', 'Broken']\n",
-    "# df_cond = delete_inspections_with_no_defects(df_cond, defects)\n",
-    "# print(\"Length : {}\".format(calculate_length_of_pipeline(df_cond)))\n",
+    "df_cond = delete_rows(df_cond, keep_defects_struct)\n",
+    "\n",
+    "df_cond = delete_inspections_with_no_defects(df_cond, keep_defects_struct)\n",
+    "print(\"Length : {}\".format(calculate_length_of_pipeline(df_cond)))\n",
     "\n",
     "\n",
     "# Count the number of inspections that remain after the deletion\n",
-    "# print(\"\\nNumber of inspections which contain defects is: {}\".format(df_cond['InspectionID'].nunique()))\n",
+    "print(\"\\nNumber of inspections which contain defects is: {}\".format(df_cond['InspectionID'].nunique()))\n",
     "\n",
     "# List the number of defects\n",
     "print(\"\\nNumber of defects is as follows: \\n{}\".format(df_cond['PACP_Code'].value_counts()))\n",
@@ -347,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +352,7 @@
        "'\\nCount number of defect hotspots\\n\\nTODO: Compare with uiform distribution/Weibull distribution/Try fitting curve\\n\\n'"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +368,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper functions\n",
+    "\n",
+    "def delete_rows(df_cond, keep_defects):\n",
+    "    \"\"\"\n",
+    "    Delete rows where the defects that we want to consider are not present\n",
+    "    \"\"\"\n",
+    "    df_cond = df_cond[df_cond['PACP_Code'].isin(keep_defects)]\n",
+    "    return df_cond\n",
+    "    \n",
+    "\n",
+    "def select_df(df, insp_id, defect_list):\n",
+    "    \"\"\"\n",
+    "    Helper function used by count_defect_pairs()\n",
+    "    This function only keeps the rows where ['defect1', 'defect2'] are present\n",
+    "    It helps speed up the computation\n",
+    "    \"\"\"\n",
+    "    df = df[(df['InspectionID'] == insp_id)]\n",
+    "    return  df[df['PACP_Code'].isin(defect_list)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,12 +407,14 @@
     "fracture_codes = ['FL', 'FC', 'FM', 'FS', 'FH', 'FH2', 'FH3', 'FH4']\n",
     "crack_codes = ['CL', 'CC', 'CM', 'CS', 'CH', 'CH2', 'CH3', 'CH4']\n",
     "broken_codes = ['BSV', 'BVV']\n",
+    "collapse_codes = ['X']\n",
+    "\n",
     "tap_codes = ['TB', 'TBI', 'TBD', 'TBC', 'TBA', 'TF', 'TFI', 'TFD', 'TFC', 'TFA', 'TFB', 'TR', 'TRI', 'TRD', 'TRC', 'TRA', 'TRB', 'TS', 'TSI', 'TSD', 'TSA', 'TSB']\n",
     "root_codes = ['RFB', 'RFL', 'RFC', 'RFJ', 'RMB', 'RML', 'RMC', 'RMJ', 'RBB', 'RBL', 'RBC', 'RBJ', 'RTB', 'RTL', 'RTC', 'RTJ']\n",
     "joint_offset_codes = ['JOS', 'JOM', 'JOL', 'JOSD', 'JOMD', 'JOLD', 'JSS', 'JSM', 'JSL', 'JAS', 'JAM', 'JAL']\n",
     "\n",
-    "defects_all = deposit_codes+deformed_codes+infiltration_codes+hole_codes+fracture_codes+crack_codes+broken_codes+root_codes+joint_offset_codes\n",
-    "defects_struct = deformed_codes+hole_codes+fracture_codes+crack_codes+broken_codes+joint_offset_codes\n",
+    "defects_all = deposit_codes+deformed_codes+infiltration_codes+hole_codes+fracture_codes+crack_codes+broken_codes+root_codes+joint_offset_codes+collapse_codes\n",
+    "defects_struct = deformed_codes+hole_codes+fracture_codes+crack_codes+broken_codes+joint_offset_codes+collapse_codes\n",
     "defects_operat = root_codes + deposit_codes\n",
     "\n",
     "keep_defects = defects_struct"
@@ -398,21 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of inspections to begin with are: 1872\n",
-      "Number of inspections after deletion are: 938\n"
+      "Total number of inspections to begin with are: 8891\n",
+      "Number of inspections after deletion are: 2825\n"
      ]
     }
    ],
    "source": [
     "# Count number of defect zones\n",
-    "df_cond = pd.read_csv('Conditions_Hazen_Sawyer.csv', sep=',')\n",
+    "df_cond = pd.read_csv('Conditions_Combined.csv', sep=',')\n",
     "df_cond.head();\n",
     "print(\"Total number of inspections to begin with are: {}\".format(df_cond['InspectionID'].nunique()))\n",
     "\n",
@@ -433,11 +457,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of defects in these inspections is as follows: \n",
+      "FM     4268\n",
+      "CL     3321\n",
+      "CM     3211\n",
+      "CC     1900\n",
+      "JOM    1642\n",
+      "FS     1519\n",
+      "FC     1429\n",
+      "FL     1342\n",
+      "CS      765\n",
+      "BSV     320\n",
+      "HSV     310\n",
+      "JOL     189\n",
+      "BVV     138\n",
+      "HVV     128\n",
+      "JSM      72\n",
+      "FH3      27\n",
+      "FH4      26\n",
+      "JSL      19\n",
+      "JAM      18\n",
+      "CH3      14\n",
+      "FH2      14\n",
+      "CH2      12\n",
+      "CH4      10\n",
+      "JAL       3\n",
+      "Name: PACP_Code, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List the number of defects\n",
+    "df_counts = df_cond['PACP_Code'].value_counts()\n",
+    "print(\"\\nNumber of defects in these inspections is as follows: \\n{}\".format(df_counts))\n",
+    "df_counts.to_csv('defect_counts.csv')\n",
+    "\n",
+    "# Count the total length of pipe in this dataframe\n",
+    "length = calculate_length_of_pipeline(df_cond)\n",
+    "print(\"Length : {}\".format(length))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "thresh = 3\n",
+    "thresh = 5\n",
     "\n",
     "\n",
     "insps = df_cond['InspectionID'].unique()\n",
@@ -471,25 +545,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[],\n",
-       " [(1, 'JOL', 11.10000038)],\n",
+       " [(2, 'BVV', 118.3000031)],\n",
        " [],\n",
-       " [(6, 'FM', 21.10000038)],\n",
-       " [(6, 'FL', 75.5)],\n",
+       " [(15, 'FM', 143.6000061)],\n",
        " [],\n",
-       " [(24, 'FL', 101.4000015)],\n",
+       " [(16, 'CS', 106.59999850000001)],\n",
+       " [(17, 'CC', 4.0)],\n",
        " [],\n",
-       " [(25, 'CC', 13.69999981)],\n",
-       " [(25, 'CL', 19.5)]]"
+       " [(23, 'CC', 179.1000061)],\n",
+       " [(24, 'CC', 2.5)]]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,17 +585,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of defects in clusters with min 5 defects is 48\n",
-      "Total number of defects is 8327\n",
-      "Max defects in a zone is 6\n",
-      "Number of clusters 9\n"
+      "Number of defects in clusters with min 3 defects is 47\n",
+      "Total number of defects is 1496\n",
+      "Max defects in a zone is 5\n",
+      "Number of clusters 15\n"
      ]
     }
    ],
@@ -533,7 +607,7 @@
     "colocated = 0\n",
     "total = 0\n",
     "max_colocated = 0\n",
-    "num_def_in_cluster = 5\n",
+    "num_def_in_cluster = 3\n",
     "filtered_zones = []\n",
     "\n",
     "for zone in zones:\n",
@@ -553,21 +627,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(917, 'CM', 21.70000076),\n",
-       " (917, 'CM', 24.60000038),\n",
-       " (917, 'CL', 27.39999962),\n",
-       " (917, 'CM', 27.70000076),\n",
-       " (917, 'FM', 27.70000076),\n",
-       " (917, 'FM', 29.70000076)]"
+       "[(603, 'HSV', 52.59999847),\n",
+       " (603, 'HSV', 55.40000153),\n",
+       " (603, 'BVV', 60.20000076),\n",
+       " (603, 'BSV', 61.09999847),\n",
+       " (603, 'HVV', 61.70000076)]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,63 +678,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(917, 'CM', 21.70000076),\n",
-       "  (917, 'CM', 24.60000038),\n",
-       "  (917, 'CL', 27.39999962),\n",
-       "  (917, 'CM', 27.70000076),\n",
-       "  (917, 'FM', 27.70000076),\n",
-       "  (917, 'FM', 29.70000076)],\n",
-       " [(917, 'CM', 52.79999924),\n",
-       "  (917, 'CM', 55.59999847),\n",
-       "  (917, 'CC', 55.79999924),\n",
-       "  (917, 'CM', 58.70000076),\n",
-       "  (917, 'FC', 61.59999847)],\n",
-       " [(1027, 'FM', 114.3000031),\n",
-       "  (1027, 'FM', 116.09999850000001),\n",
-       "  (1027, 'JOM', 117.90000149999999),\n",
-       "  (1027, 'FM', 119.40000149999999),\n",
-       "  (1027, 'FM', 122.09999850000001)],\n",
-       " [(1047, 'FC', 42.90000153),\n",
-       "  (1047, 'JOM', 45.29999924),\n",
-       "  (1047, 'CL', 46.20000076),\n",
-       "  (1047, 'CC', 48.5),\n",
-       "  (1047, 'CL', 51.29999924)],\n",
-       " [(1106, 'CL', 16.0),\n",
-       "  (1106, 'CM', 18.20000076),\n",
-       "  (1106, 'CL', 21.0),\n",
-       "  (1106, 'CM', 23.29999924),\n",
-       "  (1106, 'CL', 26.0)],\n",
-       " [(1150, 'CM', 15.39999962),\n",
-       "  (1150, 'CL', 18.29999924),\n",
-       "  (1150, 'CM', 20.5),\n",
-       "  (1150, 'CM', 23.39999962),\n",
-       "  (1150, 'CM', 26.20000076),\n",
-       "  (1150, 'FM', 26.39999962)],\n",
-       " [(1238, 'CM', 57.0),\n",
-       "  (1238, 'CL', 58.5),\n",
-       "  (1238, 'CM', 61.0),\n",
-       "  (1238, 'CL', 62.29999924),\n",
-       "  (1238, 'CL', 63.40000153),\n",
-       "  (1238, 'CL', 63.40000153)],\n",
-       " [(1713, 'FM', 228.89999390000003),\n",
-       "  (1713, 'FM', 231.6999969),\n",
-       "  (1713, 'FC', 234.0),\n",
-       "  (1713, 'FC', 235.1999969),\n",
-       "  (1713, 'FM', 236.89999390000003)],\n",
-       " [(1763, 'FM', 46.5),\n",
-       "  (1763, 'FM', 47.59999847),\n",
-       "  (1763, 'FL', 49.59999847),\n",
-       "  (1763, 'FM', 52.20000076),\n",
-       "  (1763, 'FM', 54.79999924)]]"
+       "[[(328, 'CM', 39.5), (328, 'CM', 43.70000076), (328, 'CS', 45.90000153)],\n",
+       " [(383, 'CS', 2.0), (383, 'CS', 2.0), (383, 'CC', 2.0)],\n",
+       " [(603, 'HSV', 52.59999847),\n",
+       "  (603, 'HSV', 55.40000153),\n",
+       "  (603, 'BVV', 60.20000076),\n",
+       "  (603, 'BSV', 61.09999847),\n",
+       "  (603, 'HVV', 61.70000076)],\n",
+       " [(1461, 'CM', 238.0),\n",
+       "  (1461, 'CM', 238.6999969),\n",
+       "  (1461, 'CM', 241.39999390000003)],\n",
+       " [(2032, 'JOM', 10.69999981),\n",
+       "  (2032, 'CM', 10.69999981),\n",
+       "  (2032, 'CC', 10.80000019)],\n",
+       " [(2036, 'CL', 56.79999924),\n",
+       "  (2036, 'CL', 61.20000076),\n",
+       "  (2036, 'CC', 61.90000153)],\n",
+       " [(2036, 'CL', 185.6999969),\n",
+       "  (2036, 'CL', 186.8999939),\n",
+       "  (2036, 'JOM', 186.8999939)],\n",
+       " [(2107, 'JSM', 138.6000061),\n",
+       "  (2107, 'CC', 141.3000031),\n",
+       "  (2107, 'CC', 145.1000061)],\n",
+       " [(2491, 'CC', 152.1000061),\n",
+       "  (2491, 'CC', 155.6000061),\n",
+       "  (2491, 'CL', 155.6000061)],\n",
+       " [(2493, 'CC', 242.8000031),\n",
+       "  (2493, 'CL', 243.3000031),\n",
+       "  (2493, 'CC', 247.8000031)],\n",
+       " [(2583, 'FL', 299.7000122), (2583, 'FL', 300.5), (2583, 'FL', 301.2999878)],\n",
+       " [(3088, 'FM', 155.5), (3088, 'BVV', 158.3999939), (3088, 'BVV', 160.3000031)],\n",
+       " [(3089, 'CC', 155.3999939), (3089, 'CC', 158.5), (3089, 'CC', 160.1000061)],\n",
+       " [(3333, 'FC', 218.89999390000003),\n",
+       "  (3333, 'FC', 222.5),\n",
+       "  (3333, 'JOM', 223.3000031)],\n",
+       " [(3546, 'BVV', 278.7000122),\n",
+       "  (3546, 'JOM', 278.7000122),\n",
+       "  (3546, 'JOM', 281.7000122)]]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,16 +734,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: 7652, 2: 298, 3: 21, 4: 4}"
+       "{1: 1273, 2: 88, 3: 14, 4: 0, 5: 1}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
