Added save as excel

--- a/defect_cluster_indentifier.ipynb
+++ b/defect_cluster_indentifier.ipynb
@@ -332,6 +332,30 @@
     "        ]\n",
     "    return filtered_clusters\n",
     "\n",
+    "def save_clusters_as_csv(filtered_clusters):\n",
+    "    res = []\n",
+    "    for cluster in filtered_clusters:\n",
+    "        str_defects_in_cluster = \"\"\n",
+    "\n",
+    "        for _, defect_code, distance, _, _ in cluster:\n",
+    "            str_defects_in_cluster+=f\"{defect_code} @ {distance}ft\\n\"\n",
+    "        \n",
+    "        # Get the video sid from the first defect in the cluster\n",
+    "        vid_sid = cluster[0][0]\n",
+    "        # Get timestamp of first defect in the cluster\n",
+    "        time_stamp = round(cluster[0][4]/30, 1)\n",
+    "        \n",
+    "        url = f\"https://pioneer.sewerai.com/dashboard/review/{vid_sid}?t={time_stamp}\"\n",
+    "\n",
+    "        res.append({\n",
+    "            'Video SID': vid_sid,\n",
+    "            'Defects in Cluster': str_defects_in_cluster,\n",
+    "            'PIONEER URL': url\n",
+    "        })\n",
+    "\n",
+    "    df = pd.DataFrame(res)\n",
+    "    df.to_excel(\"clusters_in_dataset.xlsx\", index=False)\n",
+    "\n",
     "\n",
     "def parse_args():\n",
     "    parser = argparse.ArgumentParser(description=\"\")\n",
@@ -396,6 +420,9 @@
     "# Calculate number of clusters\n",
     "num_clusters, max_cluster_len = calc_num_clusters(filtered_clusters)\n",
     "print(f\"Number of clusters of different sizes is: {num_clusters}\")\n",
+    "\n",
+    "# Save clusters as csv\n",
+    "save_clusters_as_csv(filtered_clusters)\n",
     "\n",
     "# TODO: Visualize defect clusters"
    ]
@@ -522,22 +549,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "13.27111111111111"
-      ]
+       "                              Video SID  \\\n",
+       "0  003cc437-cca0-4f99-9cc4-d10f7d02acc7   \n",
+       "1  adbb65ee-bccf-4994-92f2-fa2e378c33a8   \n",
+       "2  adbb65ee-bccf-4994-92f2-fa2e378c33a8   \n",
+       "3  adbb65ee-bccf-4994-92f2-fa2e378c33a8   \n",
+       "\n",
+       "                                  Defects in Cluster  \\\n",
+       "0   CL @ 0.0ft\\nB @ 0.0ft\\nFC @ 0.0ft\\nJOM @ 0.5ft\\n   \n",
+       "1  B @ 671.6ft\\nFM @ 671.6ft\\nB @ 676.6ft\\nFL @ 6...   \n",
+       "2          FL @ 683.5ft\\nB @ 687.4ft\\nFL @ 692.7ft\\n   \n",
+       "3  DTBI @ 715.0ft\\nFL @ 715.0ft\\nFL @ 717.8ft\\nFM...   \n",
+       "\n",
+       "                                         PIONEER URL  \n",
+       "0  https://pioneer.sewerai.com/dashboard/review/0...  \n",
+       "1  https://pioneer.sewerai.com/dashboard/review/a...  \n",
+       "2  https://pioneer.sewerai.com/dashboard/review/a...  \n",
+       "3  https://pioneer.sewerai.com/dashboard/review/a...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Video SID</th>\n      <th>Defects in Cluster</th>\n      <th>PIONEER URL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>003cc437-cca0-4f99-9cc4-d10f7d02acc7</td>\n      <td>CL @ 0.0ft\\nB @ 0.0ft\\nFC @ 0.0ft\\nJOM @ 0.5ft\\n</td>\n      <td>https://pioneer.sewerai.com/dashboard/review/0...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>adbb65ee-bccf-4994-92f2-fa2e378c33a8</td>\n      <td>B @ 671.6ft\\nFM @ 671.6ft\\nB @ 676.6ft\\nFL @ 6...</td>\n      <td>https://pioneer.sewerai.com/dashboard/review/a...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>adbb65ee-bccf-4994-92f2-fa2e378c33a8</td>\n      <td>FL @ 683.5ft\\nB @ 687.4ft\\nFL @ 692.7ft\\n</td>\n      <td>https://pioneer.sewerai.com/dashboard/review/a...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>adbb65ee-bccf-4994-92f2-fa2e378c33a8</td>\n      <td>DTBI @ 715.0ft\\nFL @ 715.0ft\\nFL @ 717.8ft\\nFM...</td>\n      <td>https://pioneer.sewerai.com/dashboard/review/a...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 150
+     "execution_count": 160
     }
    ],
    "source": [
-    "23888/1800"
+    "df"
    ]
   },
   {
